# pure_functional

./: .gitignore  CASES_TO_COVER.md  Cargo.toml  READING_LIST.md  README.md
src/: lib.rs
src/analyze/: analyze.rs
src/codegen/: codegen.rs
src/parse/: parse.rs
tests/: ui.rs
tests/functional/fail/: async.rs  async.stderr  imut_self.rs  imut_self.stderr  mut_arg.rs  mut_arg.stderr  mut_self.rs  mut_self.stderr  use_of_const_global.rs  use_of_const_global.stderr  use_of_static_global.rs  use_of_static_global.stderr
tests/functional/pass/: no_args_default_output.rs  no_args_with_output.rs  with_args_default_output.rs  with_args_with_output.rs
